--- a/FaderForAvAudioPlayer/Base.lproj/Main.storyboard
+++ b/FaderForAvAudioPlayer/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6724" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -19,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m72-Bt-q1Z">
-                                <rect key="frame" x="199" y="538" width="81" height="42"/>
+                                <rect key="frame" x="194" y="538" width="81" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Fade in">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -29,7 +30,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Luj-xg-b4M">
-                                <rect key="frame" x="310" y="538" width="97" height="42"/>
+                                <rect key="frame" x="305" y="538" width="97" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Fade out">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -45,16 +46,16 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fading..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjx-Kg-Xaz">
                                 <rect key="frame" x="268.5" y="509" width="62.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.039215686274509803" green="0.18431372549019609" blue="0.20392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="m72-Bt-q1Z" firstAttribute="top" secondItem="xjx-Kg-Xaz" secondAttribute="bottom" constant="8" id="2F7-53-t7i"/>
                             <constraint firstItem="Hxc-9T-D11" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="9nL-XN-Hmf"/>
                             <constraint firstItem="Hxc-9T-D11" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="BIo-Jh-2YL"/>
-                            <constraint firstAttribute="centerX" secondItem="m72-Bt-q1Z" secondAttribute="trailing" constant="20" id="GiA-1U-09e"/>
+                            <constraint firstAttribute="centerX" secondItem="m72-Bt-q1Z" secondAttribute="trailing" constant="25" id="GiA-1U-09e"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="m72-Bt-q1Z" secondAttribute="bottom" constant="20" id="NyI-BK-xB2"/>
                             <constraint firstItem="Luj-xg-b4M" firstAttribute="centerY" secondItem="m72-Bt-q1Z" secondAttribute="centerY" id="ZKW-PM-4WL"/>
                             <constraint firstItem="xjx-Kg-Xaz" firstAttribute="top" secondItem="Hxc-9T-D11" secondAttribute="bottom" constant="38" id="hQf-MT-X5H"/>
