--- a/Demo-iOS/LaunchScreen.xib
+++ b/Demo-iOS/LaunchScreen.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,12 +12,6 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cephalopod" translatesAutoresizingMaskIntoConstraints="NO" id="6w9-30-Pey">
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="6w9-30-Pey" secondAttribute="height" multiplier="1:1" id="BWm-OP-fov"/>
-                        <constraint firstAttribute="width" constant="200" id="X9W-Ca-BBK"/>
-                    </constraints>
-                </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cephalopod demo" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                     <color key="textColor" red="0.23137254901960785" green="0.27058823529411763" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -27,18 +20,13 @@
             </subviews>
             <color key="backgroundColor" red="0.85490196078431369" green="0.8901960784313725" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="6w9-30-Pey" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="1ne-Wc-lZD"/>
-                <constraint firstItem="6w9-30-Pey" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="K8w-Dn-Op4"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstItem="6w9-30-Pey" firstAttribute="top" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="10" id="cAk-IZ-1BT"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="njW-bz-YCp"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
-    <resources>
-        <image name="cephalopod" width="512" height="512"/>
-    </resources>
 </document>
